Add end to end encryption
